--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.16.0"
   }
 }
